removed the a link from burger icon and resolved the bug where site was jumping from wherever it was on the scroll to the top of page (it had a hashtag a link)

--- a/docs/style.css
+++ b/docs/style.css
@@ -127,9 +127,10 @@ header {
     position: fixed;
     margin-left: -9000px;
     background-color: rgba(241,216,222, 1);
-    transition: margin-left .5s,background-color 500ms cubic-bezier(.55,0,.1,1);
+    transition: margin-left .25s,background-color 500ms cubic-bezier(.55,0,.1,1) 200ms;
     transition-property: margin-left, background-color;
-    transition-duration: .5s, 500ms;
+    transition-duration: .25s, 700ms;
+    transition-timing-function: ease-out, cubic-bezier(0.55, 0, 0.1, 1);
     transition-timing-function: ease-out, cubic-bezier(0.55, 0, 0.1, 1);
     transition-delay: 0s, 0s;
     top: 0px;
